fix: missing scrollbar custom style on Chrome 121 (#1104)
* fix: missing scrollbar custom style on Chrome 121

* refactor: deprecate mozilla-scrollbar and scrollbars mixin

* refactor: update comment and reposition mixin

* refactor: update usage example for scrollbar

* refactor: update usage example for ie scrollbar

--- a/packages/elemental-theme/src/shared-styles/scrollbar.less
+++ b/packages/elemental-theme/src/shared-styles/scrollbar.less
@@ -201,13 +201,33 @@
   }
 }
 
-.mozilla-scrollbars () {
-  & {
-    scrollbar-color: @scrollbar-thumb-background-color @scrollbar-track-background-color;
-  }
-}
-
+// `.scrollbars()` is deprecated. Use `.standard-scrollbars()`, `.ie-scrollbars()` and `.webkit-scrollbars()` instead.
 .scrollbars() {
   .webkit-scrollbars();
   .ie-scrollbars();
+}
+
+/*
+  While `.standard-scrollbars()` and `.ie-scrollbars()` require a selector to apply CSS properties,
+  `.webkit-scrollbars()` could be used directly as it utilizes CSS pseudo-elements.
+  Here's a usage example with web component:
+```less
+::host {
+  .standard-scrollbars();
+  .ie-scrollbars();
+}
+.webkit-scrollbars();
+```
+*/
+.standard-scrollbars() {
+  @supports not selector(::-webkit-scrollbar) {
+    & {
+      scrollbar-color: @scrollbar-thumb-background-color @scrollbar-track-background-color;
+    }
+  }
+}
+
+// `.mozilla-scrollbars()` is deprecated. Use `.standard-scrollbars()` instead.
+.mozilla-scrollbars() {
+  .standard-scrollbars();
 }
