--- a/packages/halo-theme/src/shared-styles/scrollbar.less
+++ b/packages/halo-theme/src/shared-styles/scrollbar.less
@@ -254,8 +254,27 @@
   }
 }
 
-.mozilla-scrollbars () {
-  & {
-    scrollbar-width: thin;
+/*
+  While `.standard-scrollbars()` and `.ie-scrollbars()` require a selector to apply CSS properties,
+  `.webkit-scrollbars()` could be used directly as it utilizes CSS pseudo-elements.
+  Here's a usage example with web component:
+```less
+::host {
+  .standard-scrollbars();
+  .ie-scrollbars();
+}
+.webkit-scrollbars();
+```
+*/
+.standard-scrollbars() {
+  @supports not selector(::-webkit-scrollbar) {
+    & {
+      scrollbar-width: thin;
+    }
   }
+}
+
+// `.mozilla-scrollbars()` is deprecated. Use `.standard-scrollbars()` instead.
+.mozilla-scrollbars() {
+  .standard-scrollbars();
 }
